2003-10-1  Geert Stappers

	* septentrio.xml
	Removed, 0.7.4 handles #122417 well.

2003-09-16  Geert Stappers

	* septentrio.xml
	new file, added to reproduce #122417

2003-09-15  Geert Stappers

	* rivet.xml
	new file, added to reproduce #122126

2003-09-15  Geert Stappers

	* Create this examples/crash directory with a README and ChangeLog.